--- a/config/i3/config
+++ b/config/i3/config
@@ -2,10 +2,36 @@
 
 set $mod Mod4
 
-bindsym Mod1+space exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'Source Sans Pro Semibold-13'"
+# bindsym Mod1+space exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'Source Sans Pro Semibold-13'"
+bindsym Mod1+space exec rofi -show drun
 
 # Font for window titles.
 font xft:Source Sans Pro Semibold 11
+
+# Colors
+set_from_resource $base03   i3wm.color8     #002b36
+set_from_resource $base02   i3wm.color0     #073642
+set_from_resource $base01   i3wm.color10    #586e75
+set_from_resource $base00   i3wm.color11    #657b83
+set_from_resource $base0    i3wm.color12    #839496
+set_from_resource $base1    i3wm.color14    #93a1a1
+set_from_resource $base2    i3wm.color7     #eee8d5
+set_from_resource $base3    i3wm.color15    #fdf6e3
+
+set_from_resource $yellow   i3wm.color3     #b58900
+set_from_resource $orange   i3wm.color9     #cb4b16
+set_from_resource $red      i3wm.color1     #dc322f
+set_from_resource $magenta  i3wm.color5     #d33682
+set_from_resource $violet   i3wm.color13    #6c71c4
+set_from_resource $blue     i3wm.color4     #268bd2
+set_from_resource $cyan     i3wm.color6     #2aa198
+set_from_resource $green    i3wm.color2     #859900
+
+set_from_resource $background i3wm.background $base3
+set_from_resource $foreground i3wm.foreground $base00
+
+set_from_resource $lighterbg  i3wm.lighterbg  $base02
+set_from_resource $separator  i3wm.separator  $lighterbg
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -314,12 +340,12 @@ exec --no-startup-id dunst
 # set wallpaper color
 exec --no-startup-id hsetroot -solid "#303030"
 
-# class                 border  backgr. text    indicator
-client.focused          #005F87 #005F87 #d7d7d7 #005f87
-client.focused_inactive #222222 #222222 #d7d7d7 #484e50
-client.unfocused        #222222 #222222 #888888 #292d2e
-client.urgent           #af0000 #af0000 #d7d7d7 #900000
-
+# class                     border      backgr. text        indicator
+client.focused		        #2C313D     #2e3440 $blue       $background
+client.focused_inactive	    #2C313D     #303743 $background $background
+client.unfocused	        #2C313D     #303743 $background $background
+client.urgent		        $red        #282d37 $red        $background
+client.placeholder	        $background #282D37 $background $background
 
 # general config
 bindsym $mod+b border toggle
@@ -335,10 +361,10 @@ bar {
     tray_output LVDS1
         colors {
             ## class            border  backgr. text
-            focused_workspace   #005f87 #005f87 #eeeeee
+            focused_workspace   $blue   $blue   #eeeeee
             active_workspace    #444444 #444444 #eeeeee
             inactive_workspace  #222222 #222222 #eeeeee
-            urgent_workspace    #af0000 #af0000 #eeeeee
+            urgent_workspace    $red    $red    #eeeeee
 
             background #222222
             statusline #eeeeee
