--- a/config/rofi/config
+++ b/config/rofi/config
@@ -1,3 +1,12 @@
-rofi.lines: 3
-rofi.theme: android_notification
-rofi.font:  Source Sans Pro 12
+rofi.show-icons:            false
+rofi.modi:                  drun,run,window,ssh
+rofi.lines:                 7
+rofi.line-padding:          10
+rofi.matching:              fuzzy
+rofi.bw:                    0
+rofi.padding:               0
+rofi.separator-style:       none
+rofi.hide-scrollbar:        true
+rofi.line-margin:           0
+rofi.font:                  Source Sans Pro 12
+rofi.theme: ~/dotfiles/config/rofi/rofi-nord.rasi
