--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -62,7 +62,7 @@ ext x?html?, has firefox,          X, flag f = firefox -- "$@"
 # Define the "editor" for text files as first action
 # mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 # mime ^text,  label editor, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
-mime ^text, label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text, label editor = nvim -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
 # !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
